# KVM

./: build.gradle.kts  codemagic.yaml  gradle.properties  replit.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/cpp/core/: hook_engine.cpp  hook_engine.h  memory_utils.cpp  memory_utils.h  proc_utils.cpp  vfs_native.cpp  vfs_native.h
app/src/main/cpp/include/: common.h
app/src/main/java/com/kvm/: KVMApplication.kt
app/src/main/java/com/kvm/core/engine/: BootReceiver.kt  KVMEngine.kt  KVMEngineService.kt  KVMNative.kt
app/src/main/java/com/kvm/core/hook/: BinderHookManager.kt  InstrumentationHook.kt  VirtualContext.kt
app/src/main/java/com/kvm/core/installer/: ApkInstallDispatcherActivity.kt  AppCloner.kt  AppInstaller.kt
app/src/main/java/com/kvm/core/loader/: ClassLoaderManager.kt  VirtualApkLoader.kt
app/src/main/java/com/kvm/core/virtual/: VirtualActivityManager.kt  VirtualApp.kt  VirtualFileSystem.kt  VirtualPackageManager.kt  VirtualProcessManager.kt
app/src/main/java/com/kvm/data/db/: KVMDatabase.kt  VirtualAppDao.kt
app/src/main/java/com/kvm/di/: AppModule.kt  DatabaseModule.kt  RepositoryModule.kt  ServiceLocator.kt
app/src/main/java/com/kvm/presentation/: KVMApp.kt  MainActivity.kt
app/src/main/java/com/kvm/stub/: StubActivity.kt  StubContentProvider.kt  StubReceiver.kt  StubService.kt
app/src/main/res/drawable/: bg_app_icon.xml  bg_badge.xml  ic_arrow_right.xml  ic_delete.xml  ic_install_apk.xml  ic_kvm_logo_small.xml  ic_kvm_notification.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_nav_apps.xml  ic_nav_home.xml  ic_nav_settings.xml  ic_search.xml  ic_stop.xml  ic_storage.xml
app/src/main/res/layout/: activity_virtual_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_provider_paths.xml
gradle/: libs.versions.toml
(+19 files in other folders)
